objects/Work_Assignment__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents the assignment of a specific unit of work to a project team member.</description>
    <fields>
        <fullName>Assignment__c</fullName>
        <description>Different types of assignments</description>
        <label>Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Redesign</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete_Date__c</fullName>
        <description>Work Requirement created date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <description>Value of 1 if status is Complete.</description>
        <formula>IF( ISPICKVAL(Status__c, &quot;Complete&quot;), 1, 0)</formula>
        <label>Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work Requirement Name</description>
        <label>Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirement_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Role__c</fullName>
        <description>Awaiting requirement specification for the field.</description>
        <label>Project Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Configuration Resource</fullName>
                </value>
                <value>
                    <fullName>Data Architect</fullName>
                </value>
                <value>
                    <fullName>Data Migration Resource</fullName>
                </value>
                <value>
                    <fullName>Development Lead</fullName>
                </value>
                <value>
                    <fullName>Development Resource</fullName>
                </value>
                <value>
                    <fullName>Integration Resource</fullName>
                </value>
                <value>
                    <fullName>Program Manager</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>QA/Testing Lead</fullName>
                </value>
                <value>
                    <fullName>QA/Testing Resource</fullName>
                </value>
                <value>
                    <fullName>Release Analyst</fullName>
                </value>
                <value>
                    <fullName>Release Manager</fullName>
                </value>
                <value>
                    <fullName>Solution Architect</fullName>
                </value>
                <value>
                    <fullName>Solution Lead</fullName>
                </value>
                <value>
                    <fullName>Technical Architect</fullName>
                </value>
                <value>
                    <fullName>Technical Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requirement_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related request with the work assignment</description>
        <label>Requirement #</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Work Assignment</relationshipLabel>
        <relationshipName>Work_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the work asignment</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Work Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Requirement_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Work ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>WA_Create_Date</fullName>
        <active>false</active>
        <description>Work Assignment Creation Date must be greater than Today.</description>
        <errorConditionFormula>Complete_Date__c  &lt; TODAY()</errorConditionFormula>
        <errorMessage>Creation Date must be greater than Today.</errorMessage>
    </validationRules>
</CustomObject>